packages/shared-skills/skills/programming/fixtures/java/no-excuse/pass/MainPrinter.java
package sample.cli;

class MainPrinter {
    public static void main(String[] args) {
        System.out.println("ok");
    }
}
