packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/empty-catch/EmptyCatchCase.java
package sample.bad;

class EmptyCatchCase {
    void run() {
        try {
            risky();
        } catch (IllegalStateException e) {}
    }

    private void risky() {
    }
}
